template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Cloudformation template for creating icap servers under Load balancer",
    "Parameters": {
        "InstanceCount": {
            "Type": "String",
            "Default": "2",
            "Description": "Enter No of instances to be created"
        },
        "amiId": {
            "Type": "String",
            "Description": "Enter AMI ID"
        },
        "InstanceSize": {
            "Type": "String",
            "Default": "t2.xlarge",
            "Description": "Enter Size of Instance"
        },
        "KeyName": {
            "Type": "String",
            "Description": "Enter SSH Key pair Name"
        },
        "ElasticIp": {
            "Type": "String",
            "Description": "Enter allocationId of Elastic IP for Load Balancer"
        },
        "TagName": {
            "Type": "String",
            "Default": "IcapCfServer",
            "Description": "Enter the default Tag name for the EC2 instances"
        },
        "TargetGroupName": {
            "Type": "String",
            "Default": "IcapTargetGroupCF",
            "Description": "Enter the Target Group Name"
        },
        "icapLbName": {
            "Type": "String",
            "Default": "IcapLoadBalancerCF",
            "Description": "Enter the Target Group Name"
        },
        "Ec2RootVolumeSize": {
            "Description": "Ec2 root volume size",
            "Type": "String",
            "Default": "64"
        },
        "CidrIp": {
            "Description": "Source CIDR for Inbound rules of Security group",
            "Type": "String",
            "Default": "0.0.0.0/0"
        }
    },
    "Outputs": {
        "icapLoadBalancerDNSName": {
            "Description": "The DNSName of load balancer",
            "Value": {
                "Fn::GetAtt": [
                    "icapLb",
                    "DNSName"
                ]
            }
        }
    },
    "Resources": {
        "LBVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.16.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "icapEc2NLBVPC"
                    },
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "LBVPC"
                },
                "CidrBlock": "10.16.0.0/24",
                "Tags": [
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "LBVPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "LBVPCRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "LBVPC"
                },
                "Tags": [
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "LBRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "AttachGateway",
            "Properties": {
                "RouteTableId": {
                    "Ref": "LBVPCRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "SubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet"
                },
                "RouteTableId": {
                    "Ref": "LBVPCRouteTable"
                }
            }
        },
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "LBVPC"
                },
                "GroupDescription": "Incoming connections for Icap servers from LB",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "1344",
                        "ToPort": "1344",
                        "CidrIp": {
                            "Ref": "CidrIp"
                        }
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "CidrIp"
                        }
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "1345",
                        "ToPort": "1345",
                        "CidrIp": {
                            "Ref": "CidrIp"
                        }
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": {
                            "Ref": "CidrIp"
                        }
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "7000",
                        "ToPort": "7000",
                        "CidrIp": {
                            "Ref": "CidrIp"
                        }
                    }
                ]
            }
        },
        "icapLb": {
            "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
            "Properties": {
                "Name": {
                    "Ref": "icapLbName"
                },
                "Scheme": "internet-facing",
                "SubnetMappings": [
                    {
                        "AllocationId": {
                            "Ref": "ElasticIp"
                        },
                        "SubnetId": {
                            "Ref": "Subnet"
                        }
                    }
                ],
                "Type": "network",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "icapLbName"
                        }
                    },
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "icapLBListener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "DefaultActions": [
                    {
                        "Type": "forward",
                        "TargetGroupArn": {
                            "Ref": "icapLBTargetGroup"
                        }
                    }
                ],
                "LoadBalancerArn": {
                    "Ref": "icapLb"
                },
                "Port": 1344,
                "Protocol": "TCP"
            }
        },
        "icapLBTargetGroup": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "Name": {
                    "Ref": "TargetGroupName"
                },
                "HealthCheckEnabled": true,
                "HealthCheckIntervalSeconds": "30",
                "HealthCheckPath": "/status",
                "HealthCheckPort": 7000,
                "HealthCheckProtocol": "HTTP",
                "HealthyThresholdCount": 2,
                "UnhealthyThresholdCount": 2,
                "Port": 1344,
                "Protocol": "TCP",
                "VpcId": {
                    "Ref": "LBVPC"
                },
                "TargetGroupAttributes": [
                    {
                        "Key": "deregistration_delay.timeout_seconds",
                        "Value": 60
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "TargetGroupName"
                        }
                    },
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "ASGLaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "InstanceType": {
                    "Ref": "InstanceSize"
                },
                "AssociatePublicIpAddress": true,
                "SecurityGroups": [
                    {
                        "Ref": "InstanceSecurityGroup"
                    }
                ],
                "ImageId": {
                    "Ref": "amiId"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": {
                                "Ref": "Ec2RootVolumeSize"
                            }
                        }
                    }
                ]
            }
        },
        "InstanceAsg": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "VPCZoneIdentifier": [
                    {
                        "Ref": "Subnet"
                    }
                ],
                "LaunchConfigurationName": {
                    "Ref": "ASGLaunchConfig"
                },
                "MinSize": {
                    "Ref": "InstanceCount"
                },
                "MaxSize": {
                    "Ref": "InstanceCount"
                },
                "DesiredCapacity": {
                    "Ref": "InstanceCount"
                },
                "TargetGroupARNs": [
                    {
                        "Ref": "icapLBTargetGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "TagName"
                        },
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "Owner",
                        "Value": "IcapCloudFormation",
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "Delete",
                        "Value": "No",
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "Team",
                        "Value": "K8-CF",
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "Scope",
                        "Value": "Stack created using CloudFormation scripts",
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "CFStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        },
                        "PropagateAtLaunch": true
                    }
                ]
            }
        }
    }
}
